syntax = "proto3";
package login;
option go_package = "./api/protobuf/login;loginpb";

service LoginService { rpc RegisterUser(ReqRegisterUser) returns (RspRegisterUser) {}
  rpc LoginUser(ReqLoginUser) returns (RspLoginUser) {}
  rpc UpdateUser(ReqUpdateUser) returns (RspUpdateUser) {}
}

message ReqRegisterUser {
  string email = 1;  
  string username = 2;
  string password = 3;
  string confirm_password = 4;
}

message RspRegisterUser {
  int32 error_code = 1;
  int32 user_id = 2;
}

message ReqLoginUser {
  string email = 1;
  string password = 2;
}

message RspLoginUser {
  int32 error_code = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message ReqUpdateUser {
  uint32 user_id = 1;

  string username = 2;
  string password = 3;
  uint32 age = 4;
  string phone_number = 5;
  string address = 6;
}

message RspUpdateUser {
  int32 error_code = 1;
}

